	- Re-fix lead issue on Apple Silicon.
	- Adjust Pwing HP calculations to be a bit more inline with stock.
		- IF (and only if) 'RunwayProject' is enabled, colliderless Pwing edges will no longer be included for Pwing mass/lift calcs, to bring them in line with stock wings for balance reasons.
	- Apply the gapless particle emitter option to 'DecalGaplessParticleEmitter's too.
	- Reduce frequency of null FX object pool entries by catching unloading events too.
	- Add Attachnode to the Ordinance bay to fix issues with Breaking Ground Robotics.
- UI:
	- Fix exception when resetting colours in Team Icons.
	- Prevent the kill timer from showing in the Loaded Vessel Switcher window for surface vessels.
	- Updated German localization by EzBro.
- Competition:
	- Fix exception in auto-resuming tournaments when SpawnProbe.craft isn't found.
	- Fix incorrect Kill Steal attribution from 1v1 fights.
	- Abort competition if a team leader still isn't ready to engage (airborne for pilot AI) by the time the start-competition-now timer runs out.
	- Add option to start competitions despite failures occuring. For tournaments, this only applies after the third attempt fails.
- Spawning:
	- Wait until after vessels are unpacked before reverting the spawn camera - fixes an exception with EVA kerbals and KSPCF.
	- Fix freezing when vessel removal throws an exception.
	- Account for wheels protruding into the ground during instant lowering of vessels.
- GameModes:
	- Space Combat Tools:
		- Better implement SpaceFriction initialization at round start.
		- Fix AI sometimes limiting to idle speed instead of max speed in space.
		- Add limits to prevent G/AoA limiter returning infinity values in space.
	- Battle Damage:
		- Add selfsealing options to Monoprop tanks.
		- Tanks using B9PartSwitcher for fuel switching now get selfsealing options.
- AI:
	- Fix incorrect inputField for off-target dynamic roll damping.
	- Fix RippleIndex Errors from weapons overheating/reloading.