@@ -28,6 +28,7 @@ namespace BDArmory.Utils
             do
             {
                 ExplodingParts.Remove(null); // Clear out any null parts.
+                ExplodingParts.RemoveWhere(p => p.packed || (p.vessel is not null && !p.vessel.loaded)); // Remove parts that are already gone.
                 nowExploding = ExplodingParts.Where(p => !ExplodingParts.Contains(p.parent)).ToList(); // Explode outer-most parts first to avoid creating new vessels needlessly.
                 foreach (var part in nowExploding)
                 {
